force-app/main/default/objects/Case_Payment__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <formula>Receipt__r.Adjustment__c</formula>
    <label>Adjustment</label>
    <type>Checkbox</type>
</CustomField>