force-app/main/default/objects/Case_Payment__c/fields/Amount_Payable_to_Employees__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable_to_Employees__c</fullName>
    <description>Sum of Liability Payments payable to employees. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods.</description>
    <label>Amount Payable to Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>