force-app/main/default/objects/Case_Payment__c/fields/Amount_Payable_to_State__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable_to_State__c</fullName>
    <description>Sum of all Liability Payments payable to the State. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods.</description>
    <label>Amount Payable to State</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>