force-app/main/default/objects/Case_Payment__c/fields/Amounts_Due_to_DIR__c.field-meta.xml
<CustomField>
    <fullName>Amounts_Due_to_DIR__c</fullName>
    <description>DIR Fees (DIR_Attorney_Fees__c) field is getting changed to Amounts Due to DIR field</description>
    <label>Amounts Due to DIR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>