force-app/main/default/objects/Case_Payment__c/fields/Apprenticeship_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Penalties__c</fullName>
    <label>Apprenticeship Penalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>