force-app/main/default/objects/Case_Payment__c/fields/CA_Apprenticeship_Council_Craft__c.field-meta.xml
<CustomField>
    <fullName>CA_Apprenticeship_Council_Craft__c</fullName>
    <label>CA Apprenticeship Council Craft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>