force-app/main/default/objects/Case_Payment__c/fields/CA_Apprenticeship_County__c.field-meta.xml
<CustomField>
    <fullName>CA_Apprenticeship_County__c</fullName>
    <label>CA Apprenticeship County</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>