force-app/main/default/objects/Case_Payment__c/fields/California_Apprenticeship_Council__c.field-meta.xml
<CustomField>
    <fullName>California_Apprenticeship_Council__c</fullName>
    <label>California Apprenticeship Council</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>