force-app/main/default/objects/Case_Payment__c/fields/Case_Payment_Recommended_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Payment_Recommended_Date__c</fullName>
    <description>Date payment allocations were recommended, before being Applied (aka Posted). Populated by ApplyCasePayment apex code.</description>
    <inlineHelpText>Date this Case Payment's allocations to Case Issues or Judgments were recommended, before being Applied (aka Posted).</inlineHelpText>
    <label>Case Payment Recommended Date</label>
    <type>Date</type>
</CustomField>