force-app/main/default/objects/Case_Payment__c/fields/CP_Index__c.field-meta.xml
<CustomField>
    <fullName>CP_Index__c</fullName>
    <description>Used solely by the Incoming Check Log code. No need to be on any page layout or report type.</description>
    <label>CP Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>