force-app/main/default/objects/Case_Payment__c/fields/CPR_Refund_Pay_Business__c.field-meta.xml
<CustomField>
    <fullName>CPR_Refund_Pay_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPR Refund Pay Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Payments (CPR Refund Pay Business)</relationshipLabel>
    <relationshipName>Case_Payments_CPR_Refund</relationshipName>
    <type>Lookup</type>
</CustomField>