force-app/main/default/objects/Case_Payment__c/fields/Days_Elapsed_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Days_Elapsed_Payment_Received__c</fullName>
    <formula>TODAY() - Date_Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Elapsed Payment Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>