force-app/main/default/objects/Case_Payment__c/fields/Deduction_Payment__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that this CP record is a deduction payment, i.e., Payment Amount - Net Amount</description>
    <label>Deduction Payment</label>
    <type>Checkbox</type>
</CustomField>