force-app/main/default/objects/Case_Payment__c/fields/Deposited__c.field-meta.xml
<CustomField>
    <fullName>Deposited__c</fullName>
    <formula>IF(OR(TEXT(Receipt__r.Status__c) = 'Deposited', TEXT(Receipt__r.Status__c) = 'Deposited-Returned'), TRUE, FALSE)</formula>
    <label>Deposited</label>
    <type>Checkbox</type>
</CustomField>