force-app/main/default/objects/Case_Payment__c/fields/Hold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hold_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Provide the amount of the current payment to place on hold.</inlineHelpText>
    <label>Hold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>