force-app/main/default/objects/Case_Payment__c/fields/Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Number__c</fullName>
    <formula>Receipt__r.Instrument_Number__c</formula>
    <label>Instrument Number</label>
    <type>Text</type>
</CustomField>