force-app/main/default/objects/Case_Payment__c/fields/Mailing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Instructions__c</fullName>
    <label>Mailing Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>include Defendant letter</fullName>
            </value>
            <value>
                <fullName>include itemized wage statement</fullName>
            </value>
            <value>
                <fullName>include letter and ack of rct</fullName>
            </value>
            <value>
                <fullName>include letter, ack of rct, and itemized wage stmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>