force-app/main/default/objects/Case_Payment__c/fields/Nightly_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Nightly_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by CashNightlyRollup.cls to limit query to only newer records. Checked when this CP has been included in at least one nightly roll up to CM.Deposited_Funds__c.</description>
    <label>Nightly Rollup</label>
    <type>Checkbox</type>
</CustomField>