force-app/main/default/objects/Case_Payment__c/fields/Oracle_Remittance_Case_Amount__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Remittance_Case_Amount__c</fullName>
    <label>Oracle Remittance Case Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>