force-app/main/default/objects/Case_Payment__c/fields/Other_Amount_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Amount_Details__c</fullName>
    <inlineHelpText>Specifics of the Other Amount</inlineHelpText>
    <label>Other Amount Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>