force-app/main/default/objects/Case_Payment__c/fields/Other_Refund_Specify__c.field-meta.xml
<CustomField>
    <fullName>Other_Refund_Specify__c</fullName>
    <label>Other/Refund Specify</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>