force-app/main/default/objects/Case_Payment__c/fields/Party_to_Party_Payment__c.field-meta.xml
<CustomField>
    <fullName>Party_to_Party_Payment__c</fullName>
    <formula>Receipt__r.Party_to_Party_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party to Party Payment</label>
    <type>Checkbox</type>
</CustomField>