force-app/main/default/objects/Case_Payment__c/fields/Payment_Classification__c.field-meta.xml
<CustomField>
    <fullName>Payment_Classification__c</fullName>
    <label>Payment Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ODA</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Stipulated Settlement</fullName>
            </value>
            <value>
                <fullName>Conceded</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
                <isActive>false</isActive>
                <label>Oracle</label>
            </value>
            <value>
                <fullName>TRUE</fullName>
                <isActive>false</isActive>
                <label>TRUE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>