force-app/main/default/objects/Case_Payment__c/fields/Payment_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Payment_Exchange__c</fullName>
    <formula>TEXT(Receipt__r.Payment_Exchange__c)</formula>
    <label>Payment Exchange</label>
    <type>Text</type>
</CustomField>