force-app/main/default/objects/Case_Payment__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <inlineHelpText>Amount of this Case Payment intended to be refunded back to the parent Receipt's Payor.</inlineHelpText>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>