force-app/main/default/objects/Case_Payment__c/fields/Returned_Item__c.field-meta.xml
<CustomField>
    <fullName>Returned_Item__c</fullName>
    <formula>Receipt__r.Returned_Item__c</formula>
    <label>Returned Item</label>
    <type>Checkbox</type>
</CustomField>