force-app/main/default/objects/Case_Payment__c/fields/Returned_Item_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Returned_Item_Received_By__c</fullName>
    <formula>TEXT(Receipt__r.Returned_Item_Received_By__c)</formula>
    <inlineHelpText>Which unit marked the parent Receipt as a returned item</inlineHelpText>
    <label>Returned Item Received By</label>
    <type>Text</type>
</CustomField>