force-app/main/default/objects/Case_Payment__c/fields/Transmittal__c.field-meta.xml
<CustomField>
    <fullName>Transmittal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Transmittal record used to send this Case Payment data to Accounting. Populated by the TransmittalBatch apex class, run when the User clicks on the Run Transmittal Batch link on the Lightning Utility Bar.</description>
    <inlineHelpText>Accounting Transmittal record batching this Case Payment</inlineHelpText>
    <label>Transmittal</label>
    <referenceTo>Transmittal__c</referenceTo>
    <relationshipLabel>Case Payments</relationshipLabel>
    <relationshipName>Case_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>