force-app/main/default/objects/Case_Payment__c/recordTypes/BOFE.recordType-meta.xml
<RecordType>
    <fullName>BOFE</fullName>
    <active>true</active>
    <description>Payments made on BOFE Cases.</description>
    <label>BOFE</label>
</RecordType>