force-app/main/default/objects/Case_Payment__c/recordTypes/PAGA.recordType-meta.xml
<RecordType>
    <fullName>PAGA</fullName>
    <active>true</active>
    <description>Payments made on PAGA Cases.</description>
    <label>PAGA</label>
</RecordType>