force-app/main/default/objects/Case_Payment__c/recordTypes/Posted.recordType-meta.xml
<RecordType>
    <fullName>Posted</fullName>
    <active>true</active>
    <description>Prevents editing of a Case Payment record that has been Posted.</description>
    <label>Posted</label>
</RecordType>