force-app/main/default/objects/Case_Payment__c/recordTypes/RCI.recordType-meta.xml
<RecordType>
    <fullName>RCI</fullName>
    <active>true</active>
    <description>Payments made on RCI Cases.</description>
    <label>RCI</label>
</RecordType>