force-app/main/default/objects/Case_Payment__c/recordTypes/Registration.recordType-meta.xml
<RecordType>
    <fullName>Registration</fullName>
    <active>true</active>
    <description>Payments made on Registration Cases.</description>
    <label>Registration</label>
</RecordType>