force-app/main/default/objects/Case_Payment__c/validationRules/Payment_Terms_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Terms_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	ISPICKVAL(Payment_Terms__c, 'Other'),
	ISBLANK(Payment_Terms_Other__c)
)</errorConditionFormula>
    <errorMessage>If the value of Payment Terms = Other, then the Payment Terms - Other field cannot be blank.</errorMessage>
</ValidationRule>