force-app/main/default/objects/Case_Payment__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Instrument_Number__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payor__c</columns>
    <columns>Transmittal__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Payment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Reversal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>