force-app/main/default/objects/Case_Payment__c/listViews/Allocations_Recommended.listView-meta.xml
<ListView>
    <fullName>Allocations_Recommended</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Instrument_Number__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payor__c</columns>
    <columns>Transmittal__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Payment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Reversal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Allocations Recommended</value>
    </filters>
    <label>Allocations Recommended</label>
</ListView>